// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardRailView renders correctly when content is empty 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main main"
  >
    <div
      class="StyledProps--font StyledProps--main header"
    >
      <div
        class="StyledProps--font StyledProps--main headerTitle"
      >
        test-file-stub
        <div
          class="Text--withDocsTooltip"
          data-tooltip-id="overview_REPOSITORY"
        >
          <p
            class="StyledProps--font StyledProps--main title"
          >
            repositories
             (
            0
            )
          </p>
        </div>
      </div>
    </div>
    <div
      class="StyledProps--font StyledProps--main content contentEmpty"
    >
      <div
        class="StyledProps--font StyledProps--main emptyView"
      >
        <div
          class="StyledProps--font StyledProps--main emptyViewCard"
        >
          <img
            src="test-file-stub"
          />
          <p
            class="StyledProps--font StyledProps--main"
          >
            pipeline.dashboards.noRepositories
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CardRailView renders correctly while loading="true" 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main main"
  >
    <div
      class="StyledProps--font StyledProps--main header"
    >
      <div
        class="StyledProps--font StyledProps--main headerTitle"
      >
        <img
          class="activeDepIcon"
          src="test-file-stub"
        />
        <div
          class="Text--withDocsTooltip"
          data-tooltip-id="overview_ACTIVE_BUILD"
        >
          <p
            class="StyledProps--font StyledProps--main title"
          >
            pipeline.dashboards.activeBuilds
             (
            0
            )
          </p>
        </div>
      </div>
    </div>
    <div
      class="StyledProps--font StyledProps--main content"
    >
      <div
        class="StyledProps--font StyledProps--main bp3-skeleton"
        style="height: 60px;"
      />
      <div
        class="StyledProps--font StyledProps--main bp3-skeleton"
        style="height: 60px;"
      />
      <div
        class="StyledProps--font StyledProps--main bp3-skeleton"
        style="height: 60px;"
      />
    </div>
  </div>
</div>
`;
